--- a/styles/globals.css
+++ b/styles/globals.css
@@ -43,7 +43,7 @@ a {
 }
 
 #content_wrapper {
-	width: 92vw;
+	width: 90vw;
 	max-width: 1100px;
 	margin-left: auto;
 	margin-right: auto;
